add_executable(dfs dfs.cpp graph_common.cpp)
add_executable(bfs bfs.cpp graph_common.cpp)
add_executable(prim prim.cpp graph_common.cpp)
add_executable(kruskal kruskal.cpp)
add_executable(tarjan tarjan.cpp)
add_executable(dag_check dag_check.cpp graph_common.cpp)
add_executable(topo_sort topo_sort.cpp graph_common.cpp)
add_executable(graph_common graph_common.cpp)